  prevent their C99-compliant snprintf conflicting with ours.
  (David Allsopp, report by Michael Soegtrop, review by Xavier Leroy)

### Runtime system:

- #10056: Memprof: ensure young_trigger is within the bounds of the minor
  heap in caml_memprof_renew_minor_sample (regression from #8684)
  (David Allsopp, review by Guillaume Munch-Maccagnoni and
  Jacques-Henri Jourdan)

### Tools:

- #9606, #9635, #9637: fix performance regression in the debugger
  (behaviors quadratic in the size of the debugged program)
  (Xavier Leroy, report by Jacques Garrigue and Virgile Prevosto,
  review by David Allsopp and Jacques-Henri Jourdan)

### Code generation and optimizations:

- #9969, #9981: Added mergeable flag to ELF sections containing mergeable
  constants.  Fixes compatibility with the integrated assembler in clang 11.0.0.
  (Jacob Young, review by Nicolás Ojeda Bär)

### Bug fixes:

- #9970, #10010: fix the declaration scope of extensible-datatype constructors.
  A regression that dates back to 4.08 makes extensible-datatype constructors
  with inline records very fragile, for example:
    type 'a t += X of {x : 'a}
  (Gabriel Scherer, review by Thomas Refis and Leo White,
   report by Nicolás Ojeda Bär)

- #9096, #10096: fix a 4.11.0 performance regression in classes/objects
  declared within a function
  (Gabriel Scherer, review by Leo White, report by Sacha Ayoun)

- #9326, #10125: Gc.set incorrectly handles the three `custom_*` fields,
  causing a performance regression
  (report by Emilio Jesús Gallego Arias, analysis and fix by Stephen Dolan,
   code by Xavier Leroy, review by Hugo Heuzard and Gabriel Scherer)

OCaml 4.11.1 (31 August 2020)
-----------------------------

### Bug fixes:

- #9856, #9857: Prevent polymorphic type annotations from generalizing
  weak polymorphic variables.
  (Leo White, review by Jacques Garrigue)

- #9859, #9862: Remove an erroneous assertion when inferred function types
  appear in the right hand side of an explicit :> coercion